# Team-International-Technical-Test

./: .isort.cfg  README.md  conftest.py  main.py  pyproject.toml
data_capture/: __init__.py  data_capture.py  errors.py  utils.py
tests/: test_data_capture.py
